<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="9"
			android:gravity="center"
			android:text="@string/ab_name"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_1p"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_2p"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_3p"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_p"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_rb"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_ass"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_steal"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_f"
		/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:gravity="center"
			android:text="@string/ab_to"
		/>
	</LinearLayout>
	<ListView
		android:id="@+id/stat_chart"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text=" "
	/>
</LinearLayout>
