<?xml version="1.0" encoding="utf-8"?>
    <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    	android:id="@android:id/tabhost"
    	android:layout_height="fill_parent"
    	android:layout_width="fill_parent"
    >
    	<LinearLayout
    		android:orientation="vertical"
    		android:layout_height="fill_parent"
    		android:layout_width="fill_parent"
    	>
    		<TabWidget
    			android:id="@android:id/tabs"
    			android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    		/>
	    	<FrameLayout
    			android:id="@android:id/tabcontent"
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent"
    		>
    			<LinearLayout
    				android:id="@+id/tab_hometeam"
    				android:layout_height="fill_parent"
    				android:layout_width="fill_parent"
    				android:orientation="vertical"
    			>
    				<Spinner
    					android:id="@+id/spin_hometeam"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:prompt="@string/spin_prompt_hometeam"
    				/>
    				<Spinner
    					android:id="@+id/spin_hometeam_color"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:prompt="@string/spin_prompt_hometeam_color"
    				/>
    				<GridView
    					android:id="@+id/grid_hometeam_starting_lineup"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:numColumns="5"
    					android:verticalSpacing="5px"
    					android:horizontalSpacing="5px"
    				/>
    				<ListView
    					android:id="@+id/list_hometeam_player"
    					android:layout_width="fill_parent"
    					android:layout_height="fill_parent"
    					android:contentDescription="@string/hometeam_player"
    				/>
    			</LinearLayout>
    			<LinearLayout
    				android:id="@+id/tab_awayteam"
    				android:layout_height="fill_parent"
    				android:layout_width="fill_parent"
    				android:orientation="vertical"
    			>
    				<Spinner
    					android:id="@+id/spin_awayteam"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:prompt="@string/spin_prompt_awayteam"
    				/>
    				<Spinner
    					android:id="@+id/spin_awayteam_color"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:prompt="@string/spin_prompt_awayteam_color"
    				/>
    				<GridView
    					android:id="@+id/grid_awayteam_starting_lineup"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:numColumns="5"
    					android:verticalSpacing="5px"
    					android:horizontalSpacing="5px"
    				/>
    				<ListView
    					android:id="@+id/list_awayteam_player"
    					android:layout_width="fill_parent"
    					android:layout_height="fill_parent"
    					android:contentDescription="@string/awayteam_player"
    				/>

    			</LinearLayout>
    			<LinearLayout
    				android:id="@+id/tab_game"
    				android:layout_height="fill_parent"
    				android:layout_width="fill_parent"
    				android:orientation="vertical"
    			>
    				<TextView
    					android:id="@+id/tx_game_quarter"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_quarter"
    				/>
    				<TextView
    					android:id="@+id/tx_game_quarter_length"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_quarter_length"
    				/>
    				<TextView
    					android:id="@+id/tx_game_foulout"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_foulout"
    				/>
    				<TextView
    					android:id="@+id/tx_game_teamfoul_threshold_1"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_teamfoul_threshold_1"
    				/>
    				<TextView
    					android:id="@+id/tx_game_teamfoul_threshold_2"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_teamfoul_threshold_2"
    				/>
    				<TextView
    					android:id="@+id/tx_game_stopwatch"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_stopwatch"
    				/>
    				<TextView
    					android:id="@+id/tx_game_timeout"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_timeout"
    				/>
    				<TextView
    					android:id="@+id/tx_game_overtime"
    					android:layout_width="fill_parent"
    					android:layout_height="wrap_content"
    					android:text="@string/game_overtime"
    				/>
    				<Button
    					android:id="@+id/btn_setup_done"
    					android:layout_height="fill_parent"
    					android:layout_width="fill_parent"
    					android:text="@string/btn_setup_done"
    				/>
    			</LinearLayout>
    		</FrameLayout>
    	</LinearLayout>
    </TabHost>
